# construction-robotics-pipeline

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: robot_config.yaml  simulation_config.yaml
docker/: Dockerfile.minimal  Dockerfile.ros2-ur  docker-compose.yml  entrypoint.sh
docs/: CONTROL_EXAMPLES.md  control_guide.md  setup.md  usage.md
launch/: ur_gui_simulation.launch.py  ur_real_launch.py  ur_sim_launch.py  ur_simple_sim.launch.py  ur_simulation.launch.py
scripts/: run_simulation.sh  setup_environment.sh  test_control_features.sh  test_simulation.sh  verify_simulation.sh
src/ur_control/: CMakeLists.txt  package.xml
src/ur_control/ur_control/: __init__.py  control_demo.py  joint_controller.py  robot_controller.py
src/ur_state_monitor/: CMakeLists.txt  package.xml
src/ur_state_monitor/ur_state_monitor/: __init__.py  state_monitor.py
